--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.20.1"
   },
